--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "setup": "ts-node scripts/setup.ts",
+    "setFeeCollector": "ts-node scripts/setFeeCollector.ts",
     "deposit": "ts-node scripts/chargeEthOrErc20.ts",
     "format": "prettier './**/*.{js,json,md,ts,yml}' '!./src/lib/abi' --write && yarn run lint --fix",
     "lint": "eslint ."
