--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "scripts": {
     "setup": "ts-node scripts/setup.ts",
     "setFeeCollector": "ts-node scripts/setFeeCollector.ts",
+    "grantRoles": "ts-node scripts/grantRoles.ts",
+    "revokeRoles": "ts-node scripts/revokeRoles.ts",
     "deposit": "ts-node scripts/chargeEthOrErc20.ts",
     "format": "prettier './**/*.{js,json,md,ts,yml}' '!./src/lib/abi' --write && yarn run lint --fix",
     "lint": "eslint ."
