--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "hardhat": "^2.14.1",
     "hardhat-ethers": "^1.0.1",
     "prettier": "^2.3.2",
+    "dotenv": "^16.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "scripts": {
     "setup": "ts-node scripts/setup.ts",
+    "retryableSender": "ts-node scripts/getRetryableSenderAddr.ts",
+    "setFeeCollector": "ts-node scripts/setFeeCollector.ts",
+    "grantRoles": "ts-node scripts/grantRoles.ts",
+    "revokeRoles": "ts-node scripts/revokeRoles.ts",
     "deposit": "ts-node scripts/chargeEthOrErc20.ts",
     "format": "prettier './**/*.{js,json,md,ts,yml}' '!./src/lib/abi' --write && yarn run lint --fix",
     "lint": "eslint ."
