--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "scripts": {
     "setup": "ts-node scripts/setup.ts",
+    "setL1PricingRewardRate": "ts-node scripts/setL1PricingRewardRate.ts",
+    "setL1PricePerUnit": "ts-node scripts/setL1PricePerUnit.ts",
     "retryableSender": "ts-node scripts/getRetryableSenderAddr.ts",
     "setFeeCollector": "ts-node scripts/setFeeCollector.ts",
     "grantRoles": "ts-node scripts/grantRoles.ts",
