--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "setup": "ts-node scripts/setup.ts",
+    "deposit": "ts-node scripts/chargeEthOrErc20.ts",
+    "getExecutorAddress": "ts-node scripts/getExecutorAddress.ts",
+    "getRetryableSenderAddr": "ts-node scripts/getRetryableSenderAddr.ts",
+    "grantRoles": "ts-node scripts/grantRoles.ts",
+    "retryableSender": "ts-node scripts/getRetryableSenderAddr.ts",
+    "revokeRoles": "ts-node scripts/revokeRoles.ts",
+    "scheduleArbOSUpgrade": "ts-node scripts/scheduleArbOSUpgrade.ts",
+    "setFeeCollector": "ts-node scripts/setFeeCollector.ts",
     "setL1PricingRewardRate": "ts-node scripts/setL1PricingRewardRate.ts",
     "setL1PricePerUnit": "ts-node scripts/setL1PricePerUnit.ts",
     "setPerBatchGasCharge": "ts-node scripts/setPerBatchGasCharge.ts",
-    "retryableSender": "ts-node scripts/getRetryableSenderAddr.ts",
-    "setFeeCollector": "ts-node scripts/setFeeCollector.ts",
-    "grantRoles": "ts-node scripts/grantRoles.ts",
-    "revokeRoles": "ts-node scripts/revokeRoles.ts",
-    "deposit": "ts-node scripts/chargeEthOrErc20.ts",
+    "setup": "ts-node scripts/setup.ts",
     "format": "prettier './**/*.{js,json,md,ts,yml}' '!./src/lib/abi' --write && yarn run lint --fix",
     "lint": "eslint ."
   }
